# camera_calibrate

./: .gitignore  LICENSE  README.md  README_API.md  __init__.py  camera_calibrator.py  cli.py  constants.py  fisheye_camera_calibrator.py  logger_config.py  main.py  pyproject.toml  requirements.txt  setup.py
calibrators/: __init__.py  base_calibrator.py  camera_calibrator.py  fisheye_calibrator.py
camera_calibrate/: __init__.py  cli.py  constants.py
camera_calibrate/calibrators/: __init__.py  camera_calibrator.py
camera_calibrate/utils/: __init__.py  chessboard_generator.py  logger_config.py
docs/: api.rst  calibration_theory.md  fisheye_theory.md
docs/examples/: code-examples.md
docs/setup/: installation.md
docs/troubleshooting/: common-errors.md
docs/usage/: quick-start.md
utils/: __init__.py  chessboard_generator.py  image_handler.py  logger_config.py
